--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <h1>HelloWorld!</h1>
+    <h1>testA</h1>
     <a class="button--large" href="phonegap-demo.html">Start Demo</a>
 
 </body>
