--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
 
     <h1>testA</h1>
     <a class="button--large" href="phonegap-demo.html">Start Demo</a>
+    <h2>testBBB</h2>
 
 </body>
 </html>
