--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <h1>testA</h1>
-    <a class="button--large" href="phonegap-demo.html">Start Demo</a>
+    <a class="button--large" href="phonegap-demo.html">Huhahahaha</a>
     <h2>testBBB</h2>
 
 </body>
