--- a/www/index.html
+++ b/www/index.html
@@ -17,9 +17,9 @@
 </head>
 <body>
 
-    <h1>testA</h1>
+    <h1>testAABBCC</h1>
     <a class="button--large" href="phonegap-demo.html">Start Demo</a>
-    <h2>testBBB</h2>
+    <h2>testABC</h2>
 
 </body>
 </html>
